--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
 		<requiredpackage>com.woltlab.wcf.form.message.wysiwyg</requiredpackage>
 		<requiredpackage>com.woltlab.wcf.data.message.bbcode</requiredpackage>
 		<requiredpackage>com.woltlab.wcf.data.message.search</requiredpackage>
+		<requiredpackage>com.leon.pokemon.images</requiredpackage>
 	</requiredpackages>
 	<excludedpackages>
 		<excludedpackage version="1.2.*">com.woltlab.wcf</excludedpackage>
