--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,12 @@ nbactions.xml
 *.imlworkspace
 .xml
 
+# Aptana
+.externalToolBuilders/
+
 # WCF Package Builder
 build.php
+builds/
 
 # Community Framework
 # Ignore packages build directly in the workspace. They can however be added manually via git add, if wanted.
@@ -56,3 +60,5 @@ requirements/*.tar.gz
 
 # Stuff
 screenshots/
+project.diff
+project.log
