--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,10 @@ nbactions.xml
 .externalToolBuilders/
 
 # WCF Package Builder
-build.php
 builds/
 
 # Community Framework
-# Ignore packages build directly in the workspace. They can however be added manually via git add, if wanted.
+templatepatch/
 *.tar
 *.tar.gz
 requirements/*.tar
